Modif de codigo - Se agrega docker al frontend